# fet

./: .gitignore  README.md  TODO.txt
.ccls-cache/@@home@zlatan@Documents/: @opt1@lib@clang@7.0.1@include@__stddef_max_align_t.h.blob  @opt1@lib@clang@7.0.1@include@stdarg.h.blob  @opt1@lib@clang@7.0.1@include@stddef.h.blob  @opt1@lib@clang@7.0.1@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@7@algorithm.blob  @usr@include@c++@7@backward@binders.h.blob  @usr@include@c++@7@bits@algorithmfwd.h.blob  @usr@include@c++@7@bits@alloc_traits.h.blob  @usr@include@c++@7@bits@allocator.h.blob  @usr@include@c++@7@bits@basic_ios.h.blob  @usr@include@c++@7@bits@basic_ios.tcc.blob  @usr@include@c++@7@bits@basic_string.h.blob  @usr@include@c++@7@bits@basic_string.tcc.blob  @usr@include@c++@7@bits@char_traits.h.blob  @usr@include@c++@7@bits@codecvt.h.blob  @usr@include@c++@7@bits@concept_check.h.blob  @usr@include@c++@7@bits@cpp_type_traits.h.blob  @usr@include@c++@7@bits@cxxabi_forced.h.blob  @usr@include@c++@7@bits@cxxabi_init_exception.h.blob  (+172 more)
Algorithms/pracc/: bar.cpp  (+6 more)
ProjekatPMPS/: Makefile  adc.c  delay.c  main.c  main.elf  main.hex  pwm.c  pwm.h  tags  usart.c
configs/: .zshrc  alacritty.yml  coc-settings.json
mreze/: based_routing.sh
python/: bar.py  foo.py  learning.py  test.py  todo.py
strukture/pracc/liga/: CMakeLists.txt  a.out  liga.hpp  main.cpp
strukture/pracc/liga/include/: liga.hpp
strukture/pracc/liga/src/: liga.cpp
strukture/pracc/liga/v2/: liga.hpp
(+1365 files in other folders)
